--- a/final-pjt-front/package.json
+++ b/final-pjt-front/package.json
@@ -8,12 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@emotion/css": "^11.1.3",
+    "@emotion/react": "^11.4.0",
+    "@splidejs/vue-splide": "^0.3.5",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
     "run": "^1.4.0",
     "serve": "^11.3.2",
     "vue": "^2.6.11",
+    "vue-easy-slider": "^5.3.4",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
