--- a/final-pjt-front/package.json
+++ b/final-pjt-front/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.6.11",
     "vue-easy-slider": "^5.3.4",
     "vue-router": "^3.2.0",
+    "vue-simple-search-dropdown": "^1.0.1",
     "vue-slick-carousel": "^1.0.6",
     "vuex": "^3.4.0"
   },
